kubernetes/unifi-controller/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: unifi-controller
  name: unifi-controller-policy
specs:
  # TODO: deprecate
  # allow connection from ingress-nginx
  - endpointSelector: &self
      matchLabels:
        app.kubernetes.io/name: unifi-controller
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: ingress-nginx
              app.kubernetes.io/name: ingress-nginx
        toPorts:
          - ports:
              - protocol: TCP
                port: "8443"
              - protocol: TCP
                port: "8080"
  # allow connection from cilium ingress
  - endpointSelector: *self
    ingress:
      - fromEndpoints:
          - matchExpressions:
              - key: reserved:ingress
                operator: Exists
        toPorts:
          - ports:
              - protocol: TCP
                port: "8443"
              - protocol: TCP
                port: "8080"
  # allow connection from unpoller
  - endpointSelector: *self
    ingress:
      - fromEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: unpoller
              app.kubernetes.io/name: unpoller
        toPorts:
          - ports:
              - protocol: TCP
                port: "8443"
